--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ header img {
 main {
     width: 100%;
     height: auto;
-    background-color: var(--off-white);
+    background-color: #282623;
 }
 .main-exchange-container {
     width: 100%;
@@ -103,4 +103,277 @@ main {
     min-width: 288px;
     max-width: 900px;
     margin: 0 auto;
+}
+
+.main-exchange-container .backgroundImg {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    background-image: url(./assets/img/Bitcoin.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.main-exchange-container h2 {
+    margin-bottom: 30px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.4rem;
+    color: var(--off-white);
+}
+.main-exchange-container--title p {
+    margin-bottom: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
+}
+/* Table container */
+.main-tables-container {
+    display: flex;
+    flex-direction: column;
+}
+.tables-container, .tables-container2 {
+    width: 250px;
+    height: 290px;
+    margin: 0 auto 24px auto;
+    padding: 12px 0 0 0;
+    font-family: 'Inter', sans-serif;
+    border-radius: 15px;
+    border: 1px solid #3b3b3b;
+    box-shadow: 8px 8px 4px #000;
+}
+.tables-container--title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+}
+.tables-container--title-orange {
+    color: var(--bitcoin-orange);
+}
+.tables-container--title-blue {
+    color: #1a9af7;
+}
+.tables-container--update-text {
+    font-size: 1.2rem;
+    color: var(--grey);
+}
+/* Grid Tables */
+.tables-container-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 60px);
+    align-items: center;
+}
+.tables-container-info--name {
+    font-size: 1.6rem;
+    color: #B5B0AC;
+}
+.tables-container-info--price {
+    font-size: 1.4rem;
+    font-weight: normal;
+    color: #757575;
+}
+.tables-container-info--icon {
+    width: 1.1rem;
+    height: .6rem;
+    padding-left: .5rem;
+}
+/* Benefits */
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: #171615;
+}
+.product-detail--batata-logo {
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    top: -10px;
+    left: calc(50% - 20px);
+    background-image: url(./assets/icons/batata.svg);
+
+}
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+.product-detail--title h2 {
+    margin-bottom: 20px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.product-detail--title p {
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    min-height: 150px;
+    margin: 15px auto;
+    padding: 14px;
+    background-color: #2b2b2b;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+.icon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+}
+/* Plans */
+.product--card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+.product--card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+.bitcoin-img-container {
+    width: 100%;
+    min-width: 320px;
+    height: 50vh;
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+.bitcoin-img-container h2 {
+    padding-top: 60px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.main-plans-container {
+    width: 100%;
+    min-width: 320px;
+    padding-bottom: 70px;
+    text-align: center;
+}
+.plans--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.plans--title h2 {
+    padding-top: 50px;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--off-white);
+}
+.plans--title p {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #c5c5c5;
+}
+/* Cards */
+.plans-container--card {
+    position: relative;
+    width: 70%;
+    min-width: 230px;
+    max-width: 300px;
+    height: 250px;
+    margin: 50px auto 0;
+    padding: 0 15ps;
+    background-color: #282623;
+    border-radius: 10px;
+    box-shadow: 0 5px 8px #000;
+    border: 1px solid #3b3b3b;
+}
+.recomendado {
+    position: absolute;
+    width: 120px;
+    height: 32px;
+    top: -15px;
+    left: calc(50% - 60px);
+    font-size: 1.4rem;
+    border-radius: 8px;
+    color: var(--just-white);
+    padding: 8px;
+}
+.recomendado-grey {
+    background-color: #464646;
+}
+.recomendado-blue {
+    background-color: #126eaf;
+}
+.recomendado-orange {
+    background-color: var(--bitcoin-orange);
+}
+.plan-card--title {
+    padding-top: 30px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--off-white);
+}
+.plan-card--price {
+    padding: 5px 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    color: var(--off-white);
+}
+.plan-card--price span {
+    font-size: 1.2rem;
+    font-weight: 300;
+    vertical-align: 26px;
+}
+.plan-card--saving {
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plan-card--ca {
+    width: 150px;
+    height: 48px;
+    margin-top: 20px;
+    background-color: #282623;
+    border: 2px solid var(--bitcoin-orange);
+    border-radius: 10px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--off-white);
+}
+.plan-card--ca span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    vertical-align: text-bottom;
+}
+
+@media (min-width: 520px) { 
+    .main-tables-container {
+        flex-direction: row;
+    }
 }
