--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 html {
     font-size: 62.5%;
@@ -84,6 +85,7 @@ header img {
     height: 8px;
     margin-left: 10px;
     background-image: url('./assets/icons/down-arrow.svg');
+    
 }
 /* Main */
 main {
@@ -104,7 +106,6 @@ main {
     max-width: 900px;
     margin: 0 auto;
 }
-
 .main-exchange-container .backgroundImg {
     width: 200px;
     height: 200px;
@@ -295,15 +296,25 @@ main {
     line-height: 1.8rem;
     color: #c5c5c5;
 }
+/* Slider */
+.plans-container--slider {
+    display: flex;
+    height: 316px;
+    padding: 0 40px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
 /* Cards */
 .plans-container--card {
     position: relative;
+    scroll-snap-align: center;
     width: 70%;
-    min-width: 230px;
+    min-width: 190px;
     max-width: 300px;
     height: 250px;
-    margin: 50px auto 0;
-    padding: 0 15ps;
+    margin: 50px 15px 0;
+    padding: 0 15px;
     background-color: #282623;
     border-radius: 10px;
     box-shadow: 0 5px 8px #000;
@@ -371,6 +382,33 @@ main {
     background-image: url('./assets/icons/orange-right-arrow.svg');
     vertical-align: text-bottom;
 }
+/* Footer */
+footer {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    background-color: var(--bitcoin-orange);
+}
+footer section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+footer .left ul {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    list-style: none;
+}
+.left li {
+    margin: 10px 0;
+}
+.left a {
+    text-decoration: none;
+    color: var(--just-white);
+}
+
 
 @media (min-width: 520px) { 
     .main-tables-container {
