--- a/styles.css
+++ b/styles.css
@@ -133,17 +133,19 @@ main {
 /* Table container */
 .main-tables-container {
     display: flex;
+    gap: 24px;
     overflow-x: scroll;
     margin: 52px auto;
-    padding: 0 24px;
+    padding: 0 25%;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
 }
 .tables-container, .tables-container2 {
     scroll-snap-align: center;
+    justify-self: center;
     min-width: 240px;
     height: 290px;
-    margin: 12px 12px;
+    margin: 12px 0;
     padding: 12px 0 0 0;
     font-family: 'Inter', sans-serif;
     border-radius: 15px;
@@ -261,7 +263,7 @@ main {
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url('./assets/img/litebitcoinbaby.jpg');
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
